Fix z-index problem with account dropdown
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@1923 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/core/layout/css/imports/structure.css
+++ b/default_www/backend/core/layout/css/imports/structure.css
@@ -114,6 +114,7 @@ body {
 		}
 
 			#user #ddAccount {
+				z-index: 3000;
 				border: 1px solid #DDD;
 				padding: 0;
 				border-color: #CCC #BABABA #CCC #BABABA;
